Fix Control Panel Collapse

--- a/frontend/src/app/behavior-tree/control-panel/control-panel.component.scss
+++ b/frontend/src/app/behavior-tree/control-panel/control-panel.component.scss
@@ -1,10 +1,21 @@
-.control-panel {
+.control-panel-act {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     // overflow-y: auto;
 
-    width: 100%;
+    width: 400px;
+    
+    height: 100vh; /* Adjust as needed */
+  }
+
+  .control-panel-deact {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    // overflow-y: auto;
+
+    width: 20px;
     
     height: 100vh; /* Adjust as needed */
   }
@@ -27,7 +38,7 @@
   }
   
   .collapse-button {
-    width: 5%;
+    width: 50x;
     height: 100%;
 
   }
