--- a/frontend/src/app/behavior-tree/editor/editor.component.scss
+++ b/frontend/src/app/behavior-tree/editor/editor.component.scss
@@ -20,9 +20,9 @@
   }
   
   app-control-panel {
-    width: 20%;
+    width: auto;
     background-color: aqua;
-    position: relative;
+    position: fixed;
     z-index: 2;
     top: 48px;
   }
